[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/attacks/MageAttack.gd" type="Script" id=1]
[ext_resource path="res://assets/fxs/fireball.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 39.0

[sub_resource type="CircleShape2D" id=2]
radius = 165.846

[node name="Fireball" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 5
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
